# gym-imu

./: README.md  setup.md
device/: .gitignore  gen-lcov-report.sh  platformio.ini  sdkconfig.device  sdkconfig.device.old
device/include/: ESPCompatibility.hpp  FreeRTOSCompatibility.hpp  FreeRTOSPort.hpp  GPIOPort.hpp  I2CCompatibility.hpp  I2CPort.hpp  MPUCompatibility.hpp  MPUPort.hpp
device/src/: CMakeLists.txt  FreeRTOSReal.cpp  main.cpp
device/test/: BLE.test.cpp  GPIODouble.cpp  Greeter.test.cpp  IMUSignalProcessor.test.cpp  MPU6050AffineCalibrator.test.cpp  MPU6050Sensor.test.cpp
docs/: learning-sources.md  setup.md  tasks.md
docs/adrs/: 1-electronic-components.md  2-change-microcontroller.md  3-development-framework.md  4-imu-library.md  5-additional-materials.md  6-ble-library.md  7-architecture-style.md  8-signal-transformer-steps.md  learning-sources.md
docs/misc/: learning-sources.md
docs/schematics/: xiao-esp32-c3.puml
signal/: .gitignore  pyrightconfig.json  requirements.txt
signal/1-calibration/: 1-dataCapture.ipynb  2-analysis.ipynb  3-calibration.ipynb
signal/2-exercise-reception/: 1-dataCapture.ipynb
signal/2-low-pass/: lowPassFiltering.ipynb
signal/3-orientation/: complementaryFilter.ipynb
signal/calibration/: 2-analysis.ipynb  3-calibration.ipynb  analysis.ipynb  negative-x-up.csv  positive-y-up.csv  sixFaceTest.ipynb
signal/signal-utils/: .gitignore  pyproject.toml
signal/signal-utils/src/signal_utils/: FTPlotter.py  IMUSampleReader.py  IMUSampleReceiver.py  IMUSampleTimeSeriesPlotter.py  __init__.py
(+140 files in other folders)
